--- a/views/admin/pages/accounts/create.pug
+++ b/views/admin/pages/accounts/create.pug
@@ -66,7 +66,7 @@ block main
                                     .form-group
                                         label(for="phone") Số điện thoại
                                         .input-with-icon
-                                            i.fa-solid.fa-key.input-icon
+                                            i.fa-solid.fa-phone.input-icon
                                             input#phone.form-control(
                                                 type="text"
                                                 name="phone"
