--- a/views/admin/pages/accounts/index.pug
+++ b/views/admin/pages/accounts/index.pug
@@ -128,7 +128,7 @@ block main
                             action= ""
                             method="POST"
                             id = "form-delete-item"
-                            data-path = `${prefixAdmin}/accounts/delete`
+                            data-path = `/${prefixAdmin}/accounts/delete`
                         ) 
 
-                //- script(src="/admin/js/product.js")
+                script(src="/admin/js/product.js")
