Tính năng đăng xuất

--- a/views/admin/partials/header.pug
+++ b/views/admin/partials/header.pug
@@ -34,7 +34,7 @@ nav.navbar.navbar-expand-lg.navbar-dark.fixed-top(role="navigation" aria-label="
                         i.fas.fa-cog.mr-2
                         | Cài đặt
                     .dropdown-divider
-                    a#logoutBtn.dropdown-item(href="#")
+                    a#logoutBtn.dropdown-item(href=`/${prefixAdmin}/auth/logout`)
                         i.fas.fa-sign-out-alt.mr-2
                         | Đăng xuất
 
